# sorghum

./: CMakeLists.txt  README.md
include/sorghum/: esynth.h  input.h  mcmc_synth.h  para.h  synth.h  util.h  vm.h
src/: CMakeLists.txt  esynth.cpp  input.cpp  main.cpp  mcmc_synth.cpp  para.cpp  scratch.cpp  synth.cpp  util.cpp  vm.cpp
